# NativePath

./: .gitignore  .gitmodules  CMakeLists.txt  NEONvsSSE_gen.lua  NEONvsSSE_layer.c  NEONvsSSE_layer.h  README.md  buildApple.sh  buildLinux.sh  buildWindows.bat  buildiOS.sh  example.txt  generate_builtins.lua
Android/jni/: Android.mk  Application.mk
NativePath/: NativeDynamicLinking.c  NativeDynamicLinking.h  NativeMath.c  NativeMath.h  NativeMemory.c  NativeMemory.h  NativePath.h  NativePath.m  NativePool.h  NativeSIMD.h  ShaderFastMathLib.h  lol_trig.cpp  npClang  stdio.c  stdio.h  stdlib.h  test.c
NativePath.xcodeproj/: project.pbxproj
NativePath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
NativePath.xcodeproj/xcuserdata/void.xcuserdatad/xcschemes/: NativePath.xcscheme  xcschememanagement.plist
NativePath/standard/: assert.h  ctype.h  errno.h  exception  locale.h  math.h  memory.h  new  setjmp.h  stdatomic.h  stdio.h  stdlib.h  string.h  time.h  typeinfo  wchar.h  wctype.h
NativePath/standard/sys/: time.h
source/: NEONvsSSE.c  NEONvsSSE.h  NativeDynamicLinking.c  NativeMemory.c  NativePool.cpp  NativeThreading.cpp  NativeTime.cpp  lol_trig.cpp  lol_trig.h  stdio.c  stdlib.c  workarounds.c
tests/: TestSIMD.c
tools/: NEONvsSSE_gen.lua  example.txt  filterLines.lua  generate_builtins.lua  np-build-driver.lua  np-build.lua
